# 472-lab-docker

./: .gitignore  README.md
lab1-docker-image/: Dockerfile  index.js  package-lock.json  package.json
lab2-docker-compose/: .gitignore  docker-compose.yml
lab2-docker-compose/backend/: .gitignore  dockerfile  pyproject.toml  server.sh
lab2-docker-compose/backend/core/: settings.py  urls.py
lab2-docker-compose/backend/playlists/: dto.py  models.py  urls.py  views.py
lab2-docker-compose/backend/playlists/factory/: playlist_seed.py
lab2-docker-compose/backend/playlists/management/commands/: playlist_mock.py
lab2-docker-compose/backend/playlists/migrations/: 0001_initial.py
lab2-docker-compose/backend/utils/storage_service/: minio.py
lab2-docker-compose/frontend/: bun.lockb  dockerfile  nuxt.config.ts  package.json
lab2-docker-compose/frontend/components/: AlbumArtwork.vue  Menu.vue  PodcastEmptyPlaceholder.vue  Sidebar.vue
lab2-docker-compose/frontend/components/ui/context-menu/: ContextMenuCheckboxItem.vue  ContextMenuRadioItem.vue
lab2-docker-compose/frontend/components/ui/dialog/: DialogContent.vue  DialogScrollContent.vue
lab2-docker-compose/frontend/components/ui/menubar/: Menubar.vue  MenubarCheckboxItem.vue  MenubarRadioItem.vue  MenubarSubContent.vue  MenubarSubTrigger.vue  MenubarTrigger.vue
lab2-docker-compose/frontend/components/ui/tabs/: TabsList.vue  TabsTrigger.vue
lab2-docker-compose/frontend/data/: albums.ts
lab2-docker-compose/frontend/pages/: index.vue
lab2-docker-compose/nginx/: default.conf
